--- a/etc/randrctl/config.ini
+++ b/etc/randrctl/config.ini
@@ -1,4 +1,8 @@
 [hooks]
-# shell commands. You can reference $randr_profile environment variable to know profile name
-before_apply =
-after_apply =
+# Commands can be combined with &&, ||, etc. as in a usual shell
+# Supported environment variables:
+#   randr_profile - name of the profile
+#   randr_error - error message if happens
+prior_switch =
+post_switch = /usr/bin/notify-send -u low "randrctl" "switched to $randr_profile"
+post_fail = /usr/bin/notify-send -u critical "randrctl error" "can't switch to $randr_profile\n$randr_error"
