--- a/distrib/archlinux/PKGBUILD
+++ b/distrib/archlinux/PKGBUILD
@@ -3,7 +3,7 @@
 _gitname=randrctl
 pkgname=$_gitname-git
 pkgdesc="Lightweight profile based screen manager for X"
-pkgver=r3.b35d767
+pkgver=r28.7297e20
 pkgrel=1
 arch=('any')
 url="http://github.com/edio/randrctl"
@@ -28,6 +28,7 @@ package() {
   install -Dm644 etc/randrctl/profiles/examples/default "$pkgdir/etc/randrctl/profiles/examples/default"
   install -Dm644 etc/completion/randrctl.zsh "$pkgdir/usr/share/zsh/site-functions/_randrctl"
   install -Dm644 etc/completion/randrctl.bash "$pkgdir/usr/share/bash-completion/completions/randrctl"
+  install -Dm644 etc/udev/rules.d/99-randrctl.rules "$pkgdir/usr/lib/udev/rules.d/99-randrctl.rules"
 }
 
 # vim:set ts=2 sw=2 et:
