Fixed ArchLinux PKGBUILD

--- a/distrib/archlinux/PKGBUILD
+++ b/distrib/archlinux/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=1
 arch=('any')
 url="http://github.com/edio/randrctl"
 license=('GPLv3')
-makedepends=('git')
+makedepends=('git' 'python-pip')
 depends=('python' 'xorg-xrandr')
 optdepends=('bash-completion')
 source=('git+https://github.com/edio/randrctl.git')
