--- a/randrctl/misc/config.yaml
+++ b/randrctl/misc/config.yaml
@@ -3,6 +3,6 @@ hooks:
   # available environment variables:
   #   randr_profile - name of the profile
   #   randr_error - error message if happens
-  prior_switch: /usr/bin/true
+  prior_switch: {}
   post_switch: /usr/bin/notify-send -u low "randrctl" "switched to $randr_profile"
   post_fail: /usr/bin/notify-send -u critical "randrctl error" "can't switch to $randr_profile\n$randr_error"
