Move away from packit to pbr

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,14 +2,20 @@
 name = randrctl
 author = Dmytro Kostiuchenko
 author_email = edio@archlinux.us
-home-page = http://github.com/edio/randrctl
 license = GPLv3
 summary = Profile based screen manager for X
 platform = linux
+home-page = https://github.com/edio/randrctl
 
-[auto-version]
-type = git-pep440
+[entry_points]
+console_scripts =
+    randrctl = randrctl.__main__:main
 
 [files]
-scripts = bin/*
-extra_files = misc/**/*
+data_files =
+    bin/ = bin/*
+
+[pbr]
+skip_authors=true
+skip_changelog=true
+
