--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 python:
-  - "3.5"
   - "3.6"
-# command to run tests
 script:
   - python setup.py test
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
