Move all cli logic to module cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ home-page = https://github.com/edio/randrctl
 
 [entry_points]
 console_scripts =
-    randrctl = randrctl.__main__:main
+    randrctl = randrctl.cli:main
 
 [files]
 data_files =
