--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install xrandr
+        run: sudo apt-get install -y x11-xserver-utils
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
