Fix home-page config

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author_email = edio@archlinux.us
 license = GPLv3
 summary = Profile based screen manager for X
 platform = linux
-home-page = https://github.com/edio/randrctl
+home_page = https://github.com/edio/randrctl
 
 [entry_points]
 console_scripts =
