--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,27 +16,30 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch full history for version detection from git tags
-    
+
+    - name: Install xrandr
+      run: sudo apt-get install -y x11-xserver-utils
+
     - name: Install uv
       uses: astral-sh/setup-uv@v3
       with:
         version: "latest"
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       run: uv python install ${{ matrix.python-version }}
-    
+
     - name: Install dependencies
       run: |
         uv sync --dev
-    
+
     - name: Run tests
       run: |
         uv run pytest
-    
+
     - name: Build package
       run: |
         uv build
-    
+
     - name: Check package
       run: |
         uv run python -m twine check dist/*
