--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches:
-      - master
-  pull_request:    
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -12,19 +12,31 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Install xrandr
-        run: sudo apt-get install -y x11-xserver-utils
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r dev-requirements.txt
-      - name: Test
-        run: |
-          python setup.py test
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch full history for version detection from git tags
+
+    - name: Install xrandr
+      run: sudo apt-get install -y x11-xserver-utils
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        version: "latest"
+
+    - name: Set up Python ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        uv sync --dev
+
+    - name: Run tests
+      run: |
+        uv run pytest
+
+    - name: Build package
+      run: |
+        uv build
+
